# rtp-prototype

./: .gitignore  CMakeLists.txt  README.md  build.sh  rtp-prototype.code-workspace
src/: receiver.cpp  srtp.cpp  transmitter.cpp  util.cpp  util.h
